# Marker

./: .gitignore  CHANGES.md  DESIGN.md  DIAGRAM.md  INSTALL.md  INSTALL.txt  INSTALL_WIN.md  INSTRUCTIONS.md  INTERNATIONALIZATION.md  INTERNATIONALIZATION.txt  LANGCHAIN_MIGRATION_PLAN.md  MANIFEST.in  README.md  README_pl.md  apache2.conf  babel.cfg  cleanup_orphan_companies_tags.py  correct_data.py  development.ini  diagram.py  find_empty.py  inspect_tags.py  modwsgi.conf  production.ini  pyproject.toml  pytest.ini  scratch_test_ai.py  setup.py  test_hello.py  testing.ini  wsgi.py
docx/: README.md
marker/: __init__.py  dropdown.py  export.py  factories.py  geo.py  resources.py  routes.py  security.py  security_settings.py  subscribers.py
marker/alembic/: env.py
marker/alembic/versions/: 20210901_b68ff97b05fe.py  20220731_020e54cf08a7.py  20220731_0f236c4b70b8.py  20220731_138c1964c16a.py  20220731_39a9144f106b.py  20220731_578bdc35e716.py  20220731_6290dc2e9b06.py  20220731_7fabe12d8b3f.py  20220731_84f8fbf101bd.py  20220731_870e6a30fd27.py  20220731_a671309fcb03.py  20220731_b48c47f8e00a.py  20220731_c2dfed717d4e.py  20220731_e4347a008dd5.py  20220815_53b98313d0c6.py  20220816_0889bf6b926c.py  20221010_2bb39756db52.py  20221124_3743c4aa626e.py  20221124_c87ad4fb1cf7.py  20221124_dc74351a8554.py  20221217_62d988387185.py  20221217_7be5a4df6711.py  20221217_d19f09e154a7.py  20221217_e6f6e7b09b7c.py  20230108_257985e0bffb.py  20230108_5ed8962317d9.py  20230114_6dee4ce06e96.py  20230114_cc45a1a1c707.py  20230121_c214947db5b2.py  20230204_1c7f35b54901.py  20230204_1cc9ff625a06.py  (+33 more)
marker/forms/: __init__.py  account.py  association.py  comment.py  company.py  company_add_ai.py  contact.py  contractor.py  filters.py  identification_numbers.py  login.py  person.py  project.py  project_add_ai.py  report.py  select.py  tag.py  ts.py  user.py
marker/models/: __init__.py  association.py  branch.py  comment.py  company.py  contact.py  document.py  identification_number.py  investment.py  meta.py  person.py  project.py  tables.py  tag.py  tender.py  user.py
marker/scripts/: initialize_db.py
marker/templates/: 301.mako  400.mako  403.mako  404.mako  account.mako  basic_form.mako  branch_all.mako  branch_more.mako  branch_results.mako  branch_search.mako  branch_table.mako  branch_view.mako  button.mako  checkbox.mako  comment.mako  comment_all.mako  comment_card.mako  comment_filter.mako  comment_form.mako  comment_more.mako  comment_search.mako  comments_all.mako  comments_more.mako  company_activity_form.mako  company_add_comment.mako  company_add_contact.mako  company_add_tag.mako  company_all.mako  company_assoc.mako  company_comments.mako  company_contacts.mako  company_filter.mako  company_form.mako  company_identification_number.mako  company_investments.mako  company_lead.mako  company_led.mako  company_list.mako  company_list_project.mako  company_list_projects.mako  (+162 more)
marker/utils/: __init__.py  ai_metrics.py  contact_csv_import.py  dropdown.py  export.py  export_columns.py  geo.py  langchain_ai.py  llm_extract.py  llm_report.py  paginator.py  uptime.py  vcard_import.py  website_autofill.py
marker/views/: __init__.py  account.py  auth.py  branch.py  comment.py  company.py  contact.py  contract.py  contractor.py  document.py  envelope.py  home.py  investment.py  locale.py  notfound.py  person.py  prices.py  project.py  report.py  select.py  subdivision.py  tag.py  tender.py  theme.py  user.py
tests/: conftest.py  test_alembic_migrations.py  test_bulk_selection.py  test_company_contact_delete_cascade.py  test_contact_csv_import.py  test_factories.py  test_forms_company.py  test_forms_company_full.py  test_forms_contact.py  test_forms_filters.py  test_forms_name_validation.py  test_forms_ts.py  test_forms_validators.py  test_functional.py  test_functional_edge.py  test_location_and_distance_search.py  test_marker_init.py  test_models_cascade.py  test_models_unit.py  test_project_contact_delete_cascade.py  test_pshell.py  test_resources.py  test_scripts_initialize_db.py  test_security.py  test_security_settings.py  test_star_delete_cascade.py  test_subscribers.py  test_tag_association_delete_cascade.py  test_user_delete_options.py  test_utils_ai_metrics.py  test_utils_contact_csv_import.py  test_utils_export.py  test_utils_export_columns.py  test_utils_export_full.py  test_utils_export_full2.py  test_utils_geo.py  test_utils_geo_full.py  test_utils_integration.py  test_utils_langchain_ai.py  test_utils_llm_extract.py  (+27 more)
(+180 files in other folders)
