[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "marker"
version = "3.0"
description = "marker"
authors = [
    {name = "Krystian Rosiński", email = "krystian.rosinski@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
keywords = ["web", "wsgi", "bfg", "pylons", "pyramid"]
classifiers = [
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "plaster_pastedeploy",
    "pyramid",
    "pyramid_mako",
    "pyramid_retry",
    "pyramid_tm",
    "sqlalchemy[asyncio]",
    "transaction",
    "zope.sqlalchemy",
    "waitress",
    "argon2-cffi",
    "WTForms",
    "python-slugify",
    "xlsxwriter",
    "alembic",
    "zxcvbn",
    "Babel",
    "markdown",
    "nh3",
    "pycountry",
    "odfpy",
    "beautifulsoup4",
    "langchain",
    "langchain-google-genai",
]

[dependency-groups]
docs = [
    "sqlalchemy-data-model-visualizer",
]
dev = [
    "pyramid_debugtoolbar",
    "WebTest",
    "pytest",
]
testing = [
    "WebTest",
    "pytest",
    "pytest-cov",
    "factory_boy",
]
lint = [
    "ruff",
]

[project.urls]
Homepage = "https://github.com/krysros/marker"

[project.scripts]
initialize_marker_db = "marker.scripts.initialize_db:main"

[project.entry-points."paste.app_factory"]
main = "marker:main"

[tool.setuptools]
packages = {find = {exclude = ["tests"]}}
include-package-data = true
zip-safe = false
